test/corpus/imports.txt
================================================================================
Modules
================================================================================

mod secp256k1;


mod secp256k1 {}

mod secp256k1 {
    mod greetings {}
    mod farewells {}
}

pub mod secp256k1;

-------------------------------------------------------------------------------

(source_file
  (module
    (identifier))
  (module
    (identifier)
    (body))
  (module
    (identifier)
    (body
      (module
        (identifier)
        (body))
      (module
        (identifier)
        (body))))
  (module
    (visibility_modifier
      (viewer))
    (identifier)))

================================================================================
Use imports
================================================================================

use abc;
use phrases::japanese;
use sayings::english::greetings;
use sayings::english::greetings as en_greetings ;
use phrases::english::{greetings,farewells};
use sayings::japanese::farewells::*;
pub use self::greetings::hello;
use sayings::english::{self, greetings as en_greetings, farewells as en_farewells};
use three::{ dot::{one, four} };
use my::{ some::* };
use my::{*};


-------------------------------------------------------------------------------

(source_file
  (import
    (identifier))
  (import
    (import_identifier
      (identifier))
    (identifier))
  (import
    (import_identifier
      (identifier))
    (import_identifier
      (identifier))
    (identifier))
  (import
    (import_identifier
      (identifier))
    (import_identifier
      (identifier))
    (as_identifier
      (identifier)
      (identifier)))
  (import
    (import_identifier
      (identifier))
    (import_identifier
      (identifier))
    (import_body
      (identifier)
      (identifier)))
  (import
    (import_identifier
      (identifier))
    (import_identifier
      (identifier))
    (import_identifier
      (identifier)))
  (import
    (visibility_modifier
      (viewer))
    (import_identifier
      (identifier))
    (import_identifier
      (identifier))
    (identifier))
  (import
    (import_identifier
      (identifier))
    (import_identifier
      (identifier))
    (import_body
      (identifier)
      (as_identifier
        (identifier)
        (identifier))
      (as_identifier
        (identifier)
        (identifier))))
  (import
    (import_identifier
      (identifier))
    (import_body
      (import_identifier
        (identifier))
      (import_body
        (identifier)
        (identifier))))
  (import
    (import_identifier
      (identifier))
    (import_body
      (import_identifier
        (identifier))))
  (import
    (import_identifier
      (identifier))
    (import_body)))

================================================================================
Use crate and super
================================================================================

use crate::{ dot::{one, four} };
use super::{ some::* };

-------------------------------------------------------------------------------

(source_file
  (import
    (import_identifier
      (crate))
    (import_body
      (import_identifier
        (identifier))
      (import_body
        (identifier)
        (identifier))))
  (import
    (import_identifier
      (super))
    (import_body
      (import_identifier
        (identifier)))))
